--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Игнорируем системные файлы
+__pycache__/
+*.py[cod]
+*$py.class
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Игнорируем виртуальное окружение Python
+venv/
+env/
+.env
+
+# Игнорируем зависимости Node.js (они огромные, их не грузят!)
+node_modules/
+frontend/node_modules/
+dist/
+build/
+
+# Игнорируем модель, если она больше 100МБ (GitHub не пропустит)
+# Если модель маленькая, можешь закомментировать строку ниже решеткой #
+*.pkl
+
+# Логи и базы данных
+*.log
+*.sqlite
